@@ -127,9 +127,9 @@ function(add_external_plugin vcs url tag)
     set(PLUGIN_LOADER ${PLUGIN_LOADER} ${_packages} PARENT_SCOPE)
 endfunction(add_external_plugin)
 
-git_clone(https://code.google.com/p/gomock ae48011f41cd)
+git_clone(https://github.com/rafrombrc/gomock c922279faf77f29ce5781e96eb0711837fcb477c)
 add_custom_command(TARGET gomock POST_BUILD
-COMMAND ${GO_EXECUTABLE} install code.google.com/p/gomock/mockgen)
+COMMAND ${GO_EXECUTABLE} install github.com/rafrombrc/gomock/mockgen)
 git_clone(https://github.com/bitly/go-simplejson ec501b3f691bcc79d97caf8fdf28bcf136efdab8)
 git_clone(https://github.com/rafrombrc/whisper-go 89e9ba3b5c6a10d8ac43bd1a25371f3e6118c37f)
 git_clone(https://github.com/rafrombrc/go-notify e3ddb616eea90d4e87dff8513c251ff514678406)
@@ -151,7 +151,7 @@ if (INCLUDE_GEOIP)
 endif()
 
 if (INCLUDE_MOZSVC)
-    add_external_plugin(git https://github.com/mozilla-services/heka-mozsvc-plugins adecee60ffe93df144d7b61e09b8af221fe155e8)
+    add_external_plugin(git https://github.com/mozilla-services/heka-mozsvc-plugins 36fe7da278a8b626134c9f3e77743a835b50aa2a)
     git_clone(https://github.com/getsentry/raven-go 0cc1491d9d27b258a9b4f0238908cb0d51bd6c9b)
     add_dependencies(heka-mozsvc-plugins raven-go)
 endif()
