@@ -17,7 +17,6 @@ package amqp
 
 import (
 	"code.google.com/p/go-uuid/uuid"
-	"code.google.com/p/gomock/gomock"
 	"github.com/mozilla-services/heka/client"
 	"github.com/mozilla-services/heka/message"
 	. "github.com/mozilla-services/heka/pipeline"
@@ -25,6 +24,7 @@ import (
 	. "github.com/mozilla-services/heka/pipelinemock"
 	"github.com/mozilla-services/heka/plugins"
 	plugins_ts "github.com/mozilla-services/heka/plugins/testsupport"
+	"github.com/rafrombrc/gomock/gomock"
 	gs "github.com/rafrombrc/gospec/src/gospec"
 	"github.com/streadway/amqp"
 	"sync"
