@@ -16,11 +16,11 @@
 package geoip
 
 import (
-	"code.google.com/p/gomock/gomock"
 	"github.com/abh/geoip"
 	"github.com/mozilla-services/heka/message"
 	. "github.com/mozilla-services/heka/pipeline"
 	ts "github.com/mozilla-services/heka/pipeline/testsupport"
+	"github.com/rafrombrc/gomock/gomock"
 	gs "github.com/rafrombrc/gospec/src/gospec"
 	"testing"
 )
