@@ -15,13 +15,13 @@
 package irc
 
 import (
-	"code.google.com/p/gomock/gomock"
 	"fmt"
 	"github.com/ecnahc515/go-ircevent"
 	. "github.com/mozilla-services/heka/pipeline"
 	pipeline_ts "github.com/mozilla-services/heka/pipeline/testsupport"
 	"github.com/mozilla-services/heka/plugins"
 	plugins_ts "github.com/mozilla-services/heka/plugins/testsupport"
+	"github.com/rafrombrc/gomock/gomock"
 	gs "github.com/rafrombrc/gospec/src/gospec"
 	"sync"
 	"testing"
