@@ -21,7 +21,6 @@
 package payload
 
 import (
-	"code.google.com/p/gomock/gomock"
 	"code.google.com/p/goprotobuf/proto"
 	"errors"
 	"fmt"
@@ -29,6 +28,7 @@ import (
 	. "github.com/mozilla-services/heka/pipeline"
 	pipeline_ts "github.com/mozilla-services/heka/pipeline/testsupport"
 	"github.com/mozilla-services/heka/pipelinemock"
+	"github.com/rafrombrc/gomock/gomock"
 	"github.com/rafrombrc/gospec/src/gospec"
 	gs "github.com/rafrombrc/gospec/src/gospec"
 	"regexp"
